[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/art/png/character/front.png" type="Texture" id=1]
[ext_resource path="res://assets/scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/art/png/character/walk/walk0005.png" type="Texture" id=3]
[ext_resource path="res://assets/art/png/character/walk/walk0009.png" type="Texture" id=4]
[ext_resource path="res://assets/art/png/character/walk/walk0008.png" type="Texture" id=5]
[ext_resource path="res://assets/art/png/character/jump.png" type="Texture" id=6]
[ext_resource path="res://assets/art/png/character/walk/walk0004.png" type="Texture" id=7]
[ext_resource path="res://assets/art/png/character/walk/walk0002.png" type="Texture" id=8]
[ext_resource path="res://assets/art/png/character/walk/walk0003.png" type="Texture" id=9]
[ext_resource path="res://assets/art/png/character/crouch.png" type="Texture" id=10]
[ext_resource path="res://assets/audio/bfxr_sounds/Jump.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/audio/bfxr_sounds/Randomize3.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/audio/bfxr_sounds/Randomize4.wav" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 20.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "air",
"speed": 20.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 31.0
height = 22.0

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "died"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 3 ),
"transitions": PoolRealArray( 0.125, 0.203067, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -70 ), Vector2( 0, 1000 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "win"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.217638, 0.0358967 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 80, -80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 0.233258, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 1, 3 )
collision_mask = 479
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "idle"
playing = true

[node name="bodyHurtBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/died = SubResource( 6 )
anims/win = SubResource( 7 )

[node name="soundJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -15.0
pitch_scale = 0.7

[node name="soundDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0
pitch_scale = 0.9

[node name="soundDead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -10.0
pitch_scale = 1.5

[node name="soundFireball" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0
pitch_scale = 2.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
